@@ -1,5 +1,5 @@
 @c "hacprsim/commands.texi"
-@c $Id: commands.texi,v 1.2.2.8 2008/02/05 23:24:49 fang Exp $
+@c $Id: commands.texi,v 1.2.2.9 2008/02/11 19:46:09 fang Exp $
 
 @node Commands
 @chapter Commands
@@ -136,6 +136,7 @@ simulator and the simulated production rules.
 @include cmd/assert-queue.texi
 @include cmd/assertn-queue.texi
 @include cmd/backtrace.texi
+@include cmd/why-x.texi
 @include cmd/status.texi
 @include cmd/time.texi
 @include cmd/unknown-inputs.texi
