@@ -1,0 +1,32 @@
+# "celem-why-01.prsimrc"
+# @haco@ celem.haco-a
+
+watchall
+why-x c
+
+set a 1
+cycle
+why-x c
+
+set a 0
+cycle
+why-x c
+
+set a X
+set b 1
+cycle
+why-x c
+
+set b 0
+cycle
+why-x c
+
+set a 1
+cycle
+why-x c
+
+set b 1
+cycle
+why-x c
+
+
