@@ -1,0 +1,6 @@
+# "cross-coupled-why-01.prsimrc"
+# @haco@ cross-coupled.haco-a
+
+why-x t
+why-x f
+
