@@ -1,0 +1,6 @@
+t<X>, pull up/dn are both X
+  f<X>, pull up/dn are both X
+    t<X>, cycle reached
+f<X>, pull up/dn are both X
+  t<X>, pull up/dn are both X
+    f<X>, cycle reached
